<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/textView"
            android:textSize="70sp"
            app:layout_constraintBottom_toTopOf="@+id/ButtonsTable"
            android:layout_marginBottom="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    <TableLayout
            android:id="@+id/ButtonsTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp">
        <TableRow>
            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button7"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button8"
                    android:textSize="36sp">

            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_9"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button9"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/div"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/ButtonDiv"
                    android:textSize="36sp">

            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/delete"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/ButtonDel"
                    android:textSize="36sp">
            </Button>
        </TableRow>

        <TableRow>
            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button4"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button5"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button6"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/mul"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/ButtonMul"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    tools:visibility="invisible"
                    android:textSize="36sp">
            </Button>
        </TableRow>

        <TableRow>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button1"
                    android:textSize="36sp">
            </Button>
            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button2"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button3"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/minus"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/ButtonMinus"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    tools:visibility="invisible"
                    android:textSize="36sp">
            </Button>
        </TableRow>

        <TableRow>
            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/_0"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/Button0"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/ButtonComma"
                    android:text="@string/comma"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"
                    android:text=""
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/ButtonPlus"
                    android:text="@string/plus"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="36sp">
            </Button>

            <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/ButtonEqual"
                    android:text="@string/equal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textSize="36sp">
            </Button>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>